# lpc11u14_proj

./: README.md
devboard/lpc11u14-rev2/: lpc11u14.sch  lpc11u14_devboard-cache.lib  lpc11u14_devboard.kicad_pcb  lpc11u14_devboard.pro  lpc11u14_devboard.sch  pinout.sch
devboard/lpc11u14-rev3/: fp-info-cache  lpc11u14.sch  lpc11u14_devboard-cache.lib  lpc11u14_devboard-rescue.lib  lpc11u14_devboard.kicad_pcb  lpc11u14_devboard.pro  pinout.sch  sym-lib-table
devboard/lpc11u14f-rev1/: lpc11u14f-dev-cache.lib  lpc11u14f-dev-rescue.lib  lpc11u14f-dev.kicad_pcb  lpc11u14f-dev.sch  lpc11u14f-dev.sch-bak  sym-lib-table
lpc21isp/: Makefile  lpcprog.c
toolchain/: CMakeLists.txt  isp.cmake  lpc-base.cmake  nxp_lpcxpresso_11u14_Debug.ld  nxp_lpcxpresso_11u14_Release.ld  nxp_lpcxpresso_11u14_periph_blinky_Debug.ld  nxp_lpcxpresso_11u14_periph_blinky_Debug_library.ld  nxp_lpcxpresso_11u14_periph_blinky_Debug_memory.ld  nxp_lpcxpresso_11u14_periph_blinky_Release.ld  nxp_lpcxpresso_11u14_periph_blinky_Release_library.ld  nxp_lpcxpresso_11u14_periph_blinky_Release_memory.ld  post-build.cmake
